# pkg/mead_api/mead_api.pb.gw.go
@@ -83,6 +83,27 @@ func local_request_MeadAPI_CreateUser_0(ctx context.Context, marshaler runtime.M
 	return msg, metadata, err
 }
 
+func request_MeadAPI_ListStatistics_0(ctx context.Context, marshaler runtime.Marshaler, client MeadAPIClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var (
+		protoReq ListStatistics_Request
+		metadata runtime.ServerMetadata
+	)
+	if req.Body != nil {
+		_, _ = io.Copy(io.Discard, req.Body)
+	}
+	msg, err := client.ListStatistics(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	return msg, metadata, err
+}
+
+func local_request_MeadAPI_ListStatistics_0(ctx context.Context, marshaler runtime.Marshaler, server MeadAPIServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var (
+		protoReq ListStatistics_Request
+		metadata runtime.ServerMetadata
+	)
+	msg, err := server.ListStatistics(ctx, &protoReq)
+	return msg, metadata, err
+}
+
 // RegisterMeadAPIHandlerServer registers the http handlers for service MeadAPI to "mux".
 // UnaryRPC     :call MeadAPIServer directly.
 // StreamingRPC :currently unsupported pending https://github.com/grpc/grpc-go/issues/906.
@@ -128,6 +149,26 @@ func RegisterMeadAPIHandlerServer(ctx context.Context, mux *runtime.ServeMux, se
 			return
 		}
 		forward_MeadAPI_CreateUser_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+	})
+	mux.Handle(http.MethodPost, pattern_MeadAPI_ListStatistics_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		var stream runtime.ServerTransportStream
+		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		annotatedContext, err := runtime.AnnotateIncomingContext(ctx, mux, req, "/mead_api.MeadAPI/ListStatistics", runtime.WithHTTPPathPattern("/api/statistics"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := local_request_MeadAPI_ListStatistics_0(annotatedContext, inboundMarshaler, server, req, pathParams)
+		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		forward_MeadAPI_ListStatistics_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 	})
 
 	return nil
@@ -203,15 +244,34 @@ func RegisterMeadAPIHandlerClient(ctx context.Context, mux *runtime.ServeMux, cl
 		}
 		forward_MeadAPI_CreateUser_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 	})
+	mux.Handle(http.MethodPost, pattern_MeadAPI_ListStatistics_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		annotatedContext, err := runtime.AnnotateContext(ctx, mux, req, "/mead_api.MeadAPI/ListStatistics", runtime.WithHTTPPathPattern("/api/statistics"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := request_MeadAPI_ListStatistics_0(annotatedContext, inboundMarshaler, client, req, pathParams)
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		forward_MeadAPI_ListStatistics_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+	})
 	return nil
 }
 
 var (
-	pattern_MeadAPI_Version_0    = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"api", "version"}, ""))
-	pattern_MeadAPI_CreateUser_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"api", "user"}, ""))
+	pattern_MeadAPI_Version_0        = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"api", "version"}, ""))
+	pattern_MeadAPI_CreateUser_0     = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"api", "user"}, ""))
+	pattern_MeadAPI_ListStatistics_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"api", "statistics"}, ""))
 )
 
 var (
-	forward_MeadAPI_Version_0    = runtime.ForwardResponseMessage
-	forward_MeadAPI_CreateUser_0 = runtime.ForwardResponseMessage
+	forward_MeadAPI_Version_0        = runtime.ForwardResponseMessage
+	forward_MeadAPI_CreateUser_0     = runtime.ForwardResponseMessage
+	forward_MeadAPI_ListStatistics_0 = runtime.ForwardResponseMessage
 )
